--- a/React/estore-app/package.json
+++ b/React/estore-app/package.json
@@ -11,9 +11,11 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.6",
+    "redux": "^5.0.1",
     "web-vitals": "^2.1.4",
     "yup": "^1.4.0"
   },
